--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
     />
   </head>
 <body>
+    <div class="row">
+        <div class="col-12"><h1>Bedroom Rush</h1></div>
+    </div>
     <!-- JavaScript Includes -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
