Add more base html for game data

--- a/index.html
+++ b/index.html
@@ -57,6 +57,55 @@
     <div class="row">
         <div class="col-12"><h1>Bedroom Rush</h1></div>
     </div>
+    <div class="row">
+        <div class="col-6"><h3>How to play:</h1>
+        <p>Match the pairs of items to help the girls tidy thier bedroom bedore their parents come upstairs!</p>
+        </div>
+        <div class="col-6"><h3>TOP SCORE: 17 Items</h1>
+        <div>PARENTS ARRIVE IN: 3 min(s) 0 sec(s)</div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12"><h2>GO PLAYER NAME!</h2></div>
+    </div>
+    <div class="row">
+        <div class="col-2">Girl Image 1</div>
+        <div class="col-8">
+            <div class="row">
+                <div class="col-2">CARD 1</div>
+                <div class="col-2">CARD 2</div>
+                <div class="col-2">CARD 3</div>
+                <div class="col-2">CARD 4</div>
+                <div class="col-2">CARD 5</div>
+                <div class="col-2">CARD 6</div>
+            </div>
+            <div class="row">
+                <div class="col-2">CARD 7</div>
+                <div class="col-2">CARD 8</div>
+                <div class="col-2">CARD 9</div>
+                <div class="col-2">CARD 10</div>
+                <div class="col-2">CARD 11</div>
+                <div class="col-2">CARD 12</div>
+            </div>
+            <div class="row">
+                <div class="col-2">CARD 13</div>
+                <div class="col-2">CARD 14</div>
+                <div class="col-2">CARD 15</div>
+                <div class="col-2">CARD 16</div>
+                <div class="col-2">CARD 17</div>
+                <div class="col-2">CARD 18</div>
+            </div>
+            <div class="row">
+                <div class="col-2">CARD 19</div>
+                <div class="col-2">CARD 20</div>
+                <div class="col-2">CARD 21</div>
+                <div class="col-2">CARD 22</div>
+                <div class="col-2">CARD 23</div>
+                <div class="col-2">CARD 24</div>
+            </div>
+        </div>
+        <div class="col-2">Girl Image 2</div>
+    </div>
     <!-- JavaScript Includes -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
