Add progress bar div in position

--- a/index.html
+++ b/index.html
@@ -106,6 +106,12 @@
         </div>
         <div class="col-2">Girl Image 2</div>
     </div>
+        <div class="row">
+        <div class="col-12"><h2>PROGRESS</h2></div>
+    </div>
+    <div class="row">
+        <div class="col-12" id="progressbar"><div class="progress-label">Loading...</div></div>
+    </div>
     <!-- JavaScript Includes -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
