Upload and link card defaul image and resize in css

--- a/index.html
+++ b/index.html
@@ -72,36 +72,36 @@
         <div class="col-2">Girl Image 1</div>
         <div class="col-8">
             <div class="row">
-                <div class="col-2">CARD 1</div>
-                <div class="col-2">CARD 2</div>
-                <div class="col-2">CARD 3</div>
-                <div class="col-2">CARD 4</div>
-                <div class="col-2">CARD 5</div>
-                <div class="col-2">CARD 6</div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
             </div>
             <div class="row">
-                <div class="col-2">CARD 7</div>
-                <div class="col-2">CARD 8</div>
-                <div class="col-2">CARD 9</div>
-                <div class="col-2">CARD 10</div>
-                <div class="col-2">CARD 11</div>
-                <div class="col-2">CARD 12</div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
             </div>
             <div class="row">
-                <div class="col-2">CARD 13</div>
-                <div class="col-2">CARD 14</div>
-                <div class="col-2">CARD 15</div>
-                <div class="col-2">CARD 16</div>
-                <div class="col-2">CARD 17</div>
-                <div class="col-2">CARD 18</div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
             </div>
             <div class="row">
-                <div class="col-2">CARD 19</div>
-                <div class="col-2">CARD 20</div>
-                <div class="col-2">CARD 21</div>
-                <div class="col-2">CARD 22</div>
-                <div class="col-2">CARD 23</div>
-                <div class="col-2">CARD 24</div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
+                <div class="col-2"><img class="card-image-default" src="assets/images/BlackPinkStar.jpg"></div>
             </div>
         </div>
         <div class="col-2">Girl Image 2</div>
