Update page title with game name

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       type="text/css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Game Name - Fun Game</title>
+    <title>Bedroom Rush</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
